@@ -1,9 +1,0 @@
-{{define "page_footer"}}
-<div id="footer">
-<div id="copyright"><a href="https://launchpad.net/hockeypuck">Hockeypuck OpenPGP Key Server</a> - Copyright (C) 2012 <a href="/pks/lookup?op=vindex&search=0x44A2D1DB">Casey Marshall</a> and Hockeypuck contributors.</div>
-<div id="copyleft">This program is free software: you can redistribute it and/or modify
-  it under the terms of the
-  <a href="https://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a>
-  as published by the Free Software Foundation, version 3.</div>
-</div>
-{{end}}
