@@ -1,4 +1,0 @@
-{{define "head"}}
-<link rel="stylesheet" href="/css/reset.css" />
-<link rel="stylesheet" href="/css/hkp.css" />
-{{end}}
