@@ -1,17 +1,0 @@
-{{define "page_header"}}
-<div id="header">
-<h1><a id="logo" href="/">Hockeypuck</a></h1>
-<div id="topmenu">
-	<ul>
-		<li><span class="menu-label">OpenPGP:</span></li>
-		<li><a href="/openpgp/lookup">Search</a></li>
-		<li><a href="/openpgp/add">Add</a></li>
-		<li><a href="/pks/lookup?op=stats">Stats</a></li>
-		<li><span class="menu-label">Machines:</span></li>
-		<li><span class="todo-link">SSH</span></li>
-		<li><span class="todo-link">SSL/TLS</span></li>
-		<li class="about"><a href="https://launchpad.net/hockeypuck">Project Home</a></li>
-	</ul>
-</div>
-</div>
-{{end}}
