@@ -1,14 +1,0 @@
-{{define "title"}}Hockeypuck | Search OpenPGP Public Keys{{end}}
-
-{{define "page_content"}}
-<h2 class="pks-search">OpenPGP Search</h2>
-<form class="pks-search" method="post">
-	<div>
-		<input name="search" type="search"></input>
-	</div>
-	<div>
-		<input id="search_submit" formaction="/pks/lookup?op=index" type="submit" value="Public Key Search"></input>
-		<input id="get_submit" formaction="/pks/lookup?op=get" type="submit" value="I'm Feeling Lucky"></input>
-	</div>
-</form>
-{{end}}
