@@ -1,53 +1,0 @@
-{{define "title"}}Hockeypuck | Key Search Results{{end}}
-
-{{define "index-top"}}
-{{template "top" .}}
-<h2>Search Results: '{{.}}'</h2>
-<table>
-<tr>
-	<th>Type</th>
-	<th>Key Length/ID</th>
-	<th>Created</th>
-	<th></th>
-</tr>
-{{end}}
-
-{{define "index-bottom"}}
-</table>
-{{template "bottom" .}}
-{{end}}
-
-{{define "pub-index-row"}}
-<tr>
-<td>pub</td>
-<td><img src="data:image/jpeg;base64,{{.FpQrCode}}"/>{{.KeyLength}}{{.AlgoCode}}/<a href="/pks/lookup?op=get&search=0x{{.Fingerprint}}">{{.Fingerprint}}</a></td>
-<td>{{.CreationTime}}</td>
-<td></td>
-</tr>
-{{end}}
-
-{{define "uid-index-row"}}
-<tr>
-<td>uid</td>
-<td colspan='2'></td>
-<td><a href="/pks/lookup?op=vindex&search=0x{{.Fingerprint}}">{{.Id}}</a></td>
-</tr>
-{{end}}
-
-{{define "sig-vindex-row"}}
-<tr>
-<td>sig</td>
-<td>{{.ShortId}}</td>
-<td>{{.SigTime}}</td>
-<td>{{.ShortId}}</td>
-<td><a href="/pks/lookup?op=vindex&search=0x{{.LongId}}">{{.Uid}}</a></td>
-</tr>
-{{end}}
-
-{{define "uattr-image-row"}}
-<tr>
-<td>uattr</td>
-<td colspan='4'><img src="data:image/jpeg;base64,{{.ImageData}}"></img></td>
-</tr>
-{{end}}
-
