@@ -1,41 +1,0 @@
-{{define "title"}}Hockeypuck | Server Status{{end}}
-
-{{define "page_content"}}
-<h2>Server Status</h2>
-<table>
-<tr><th>Hostname:</th><td>{{.Hostname}}</td></tr>
-<tr><th>Port:</th><td>{{.Port}}</td></tr>
-<tr><th>Version:</th><td>{{.Version}}</td></tr>
-</table>
-{{if .PksPeers}}
-<h2>Outgoing Mailsync Peers</h2>
-<table>
-<tr><th>Email Address</th><th>Last Synchronized</th></tr>
-{{range .PksPeers}}
-<tr><td>{{.Addr}}</td><td>{{timef .LastSync}}</td></tr>
-{{end}}
-</table>
-{{end}}
-<h2>Statistics</h2>
-<table>
-<tr><th>Total number of keys:</th><td>{{.TotalKeys}}</td></tr>
-</table>
-{{if .KeyStatsHourly}}
-<h3>Keys loaded in the last 24 hours</h3>
-<table>
-<tr><th>Hour</th><th>New</th><th>Updated</th></tr>
-{{range .KeyStatsHourly}}
-<tr><td>{{.Hour}}</td><td>{{.Created}}</td><td>{{.Modified}}</td></tr>
-{{end}}
-</table>
-{{end}}
-{{if .KeyStatsDaily}}
-<h3>Keys loaded in the last 7 days</h3>
-<table>
-<tr><th>Day</th><th>New</th><th>Updated</th></tr>
-{{range .KeyStatsDaily}}
-<tr><td>{{.Day}}</td><td>{{.Created}}</td><td>{{.Modified}}</td></tr>
-{{end}}
-</table>
-{{end}}
-{{end}}
