@@ -34,6 +34,11 @@ hockeypuck (1.0~rc1) UNRELEASED; urgency=low
     populating.txt:
     - Revised documentation, add http://hockeypuck.github.io doc deploy
       script.
+  * cmd/hockeypuck/run.go, hkp/templates.go,
+    openpgp/index.go, === removed directory
+    instroot/var/lib/hockeypuck/www/templates, router.go:
+    - Moved templates into string constants. Make webroot optional for
+      CSS and fonts, but not essential to running the service.
 
  -- Casey Marshall <cmars@cmarstech.com>  Fri, 04 Oct 2013 15:15:24 -0500
 
